Fix malformed span in footer

--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -19,7 +19,7 @@ title: The Design of Forms in Government departments
     </main>
 
     <footer>
-      Made with <span aria-label="love">❤</a> from <a href="https://twitter.com/nickcolley">@nickcolley</a>
+      Made with <span aria-label="love">❤</span> from <a href="https://twitter.com/nickcolley">@nickcolley</a>
     </footer>
   </body>
 </html>
