--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -1,11 +1,8 @@
----
-title: The Design of Forms in Government departments
----
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ title }}</title>
+    <title>The Design of Forms in Government departments</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="stylesheet" href="/assets/styles.css">
   </head>
@@ -17,6 +14,8 @@ title: The Design of Forms in Government departments
     <main id="main" role="main">
       {{ content | safe }}
     </main>
+
+    <hr/>
 
     <footer>
       Made with <span aria-label="love">❤</span> from <a href="https://twitter.com/nickcolley">@nickcolley</a>
