--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/assets/styles.css">
   </head>
   <body>
-    <a href="#main" class="skip-link">
-      Skip to content
+    <a href="#contents" class="skip-link">
+      Skip to contents
     </a>
 
     <main id="main" role="main">
