Add report something wrong

--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -18,6 +18,18 @@
     <hr/>
 
     <footer>
+      <details class="mb8">
+          <summary>Report something wrong with this page</summary>
+          <h4 class="mb0">GitHub</h4>
+          <p>
+              You can <a href="https://github.com/nickcolley/the-design-of-forms-in-government-departments/issues">raise an issue on GitHub.</a>
+          </p>
+
+          <h4 class="mb0">Twitter</h4>
+          <p>
+              You can contact me on Twitter at <a href="https://twitter.com/nickcolley">@nickcolley</a>
+          </p>
+      </details>
       Made with <span aria-label="love">❤</span> from <a href="https://twitter.com/nickcolley">@nickcolley</a>
     </footer>
   </body>
