Add highlight modern day thing

--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -17,7 +17,7 @@
 
     <hr/>
 
-    <footer>
+    <footer class="highlight-modern">
       <details class="mb8">
           <summary>Report something wrong with this page</summary>
           <h4 class="mb0">GitHub</h4>
