--- a/src/index.njk
+++ b/src/index.njk
@@ -120,7 +120,10 @@ layout: default.njk
                     {{ item.data.title }}
                 </a>
             </dt>
-            <dd>page {{ item.data.pageNumber.start }}</dd>
+            <dd>
+                {% if itemSection === 'Introduction' %}page {% endif %}
+                {{ item.data.pageNumber.start }}
+            </dd>
         {% endfor %}
     </dl>
 {% endfor %}
