Link up page 170 ref

--- a/src/index.njk
+++ b/src/index.njk
@@ -93,7 +93,7 @@ layout: default.njk
     likely to be of practical value. It is hoped that this will serve both as
     a guide to the newcomer to forms work and as an aide-mémoire to the
     experienced officer. Fuller details about various related topics can be
-    found in the publications listed on <a href="" style="color: red;">page 170</a>.
+    found in the publications listed on <a href="/reference-material/">page 170</a>.
 </p>
 <p class="mb16">
     The illustrations in this book were prepared by H.M. Stationery Office.
