--- a/src/index.njk
+++ b/src/index.njk
@@ -109,9 +109,9 @@ layout: default.njk
 
 <hr />
 
-{% for itemSection, items in collections.page | groupByNested("data.section") %}
+{% for itemSection, items in collections.page | sortNested(false, false, 'data.pageNumber.start') | groupByNested("data.section") %}
     {% if itemSection === 'End' %}
-        {% for item in items | sortNested(false, false, 'data.pageNumber.start') %}
+        {% for item in items %}
             <h3 id="{{ item.data.title | lower | replace(' ', '-') }}" class="upper mb3">
                 <a href="{{ item.url }}">
                     {{ item.data.title }} {{ item.data.pageNumber.start }}
@@ -123,7 +123,7 @@ layout: default.njk
             {{ itemSection }}
         </h3>
         <dl>
-            {% for item in items | sortNested(false, false, 'data.pageNumber.start') %}
+            {% for item in items %}
                 <dt>
                     <a href="{{ item.url }}">
                         {{ item.data.title }}
