--- a/src/index.njk
+++ b/src/index.njk
@@ -107,6 +107,55 @@ layout: default.njk
     Contents
 </h2>
 
+<h3>
+    Progress
+</h3>
+<style>
+.progress-bar {
+    padding: 0;
+    display: flex;
+    list-style: none;
+}
+
+[data-status] {
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-family: var(--font-family-sans-serif);
+    padding: .1rem .3rem;
+    border: 3px double black;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+[data-status="stub"] {
+    background: orangered;
+    color: white;
+}
+
+[data-status="text"] {
+    background: orange;
+}
+
+[data-status="qa"] {
+    background: cadetblue;
+    color: white;
+}
+
+[data-status="completed"] {
+    background: green;
+    color: white;
+}
+</style>
+<ul class="progress-bar">
+    {% for group, items in collections.page | groupByNested("data.status") %}
+        <li data-status="{{ group }}" style="min-width: {{ items.length / collections.page.length * 100 }}%">
+            {{ group }}: {{ items.length }}
+        </li>
+    {% endfor %}
+</ul>
+
 <hr />
 
 {% for itemSection, items in collections.page | sortNested(false, false, 'data.pageNumber.start') | groupByNested("data.section") %}
@@ -114,8 +163,10 @@ layout: default.njk
         {% for item in items %}
             <h3 id="{{ item.data.title | lower | replace(' ', '-') }}" class="upper mb3">
                 <a href="{{ item.url }}">
-                    {{ item.data.title }} {{ item.data.pageNumber.start }} ({{ item.data.status }})
+                    {{- item.data.title -}}
                 </a>
+                {{ item.data.pageNumber.start }}
+                <span data-status="{{ item.data.status }}">{{ item.data.status }}</span>
             </h3>
         {% endfor %}
     {% else %}
@@ -126,12 +177,13 @@ layout: default.njk
             {% for item in items %}
                 <dt>
                     <a href="{{ item.url }}">
-                        {{ item.data.title }}
+                        {{- item.data.title -}}
                     </a>
                 </dt>
                 <dd>
                     {% if itemSection === 'Introduction' %}page {% endif %}
-                    {{ item.data.pageNumber.start }} ({{ item.data.status }})
+                    {{ item.data.pageNumber.start }}
+                    <span data-status="{{ item.data.status }}">{{ item.data.status }}</span>
                 </dd>
             {% endfor %}
         </dl>
