--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -23,7 +23,7 @@
           <summary>Report something wrong with this page</summary>
           <h4 class="mb0">GitHub</h4>
           <p>
-              You can <a href="https://github.com/nickcolley/the-design-of-forms-in-government-departments/issues">raise an issue on GitHub.</a>
+              You can <a href="https://github.com/nickcolley/design-of-forms/issues">raise an issue on GitHub.</a>
           </p>
 
           <h4 class="mb0">Twitter</h4>
@@ -31,7 +31,7 @@
               You can contact me on Twitter at <a href="https://twitter.com/nickcolley">@nickcolley</a>
           </p>
       </details>
-      Made with <span aria-label="love">❤</span> from <a href="https://twitter.com/nickcolley">@nickcolley</a>
+      Made with <span aria-label="love">❤</span> by <a href="https://twitter.com/nickcolley">@nickcolley</a>
     </footer>
     <script src="/assets/scripts.js"></script>
   </body>
