--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -8,8 +8,11 @@
   </head>
   <body>
     <script>document.documentElement.classList.remove('no-js');</script>
-    <a href="#{{ skiplink | default('contents') }}" class="skip-link">
-      Skip to content{{ "s" if not skiplink }}
+    <a href="#main" class="skip-link">
+      Skip to main content
+    </a>
+    <a href="#table-of-contents" class="skip-link">
+      Skip to table of contents
     </a>
 
     <main id="main" role="main">
