Use jpg instead of png
Use mix-blend-mode to mix with background and save bytes...

More to do here but will start with this.

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -214,8 +214,9 @@ details > summary + * {
   margin-top: 1rem;
 }
 
-p > img {
+main > p > img {
   max-width: 100%;
+  mix-blend-mode: darken;
 }
 
 figure {
