--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -214,6 +214,7 @@ details > summary + * {
   margin-top: 1rem;
 }
 
+main > figure > p > img,
 main > p > img {
   max-width: 100%;
   mix-blend-mode: darken;
