Remove output of status

--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -23,7 +23,7 @@ layout: default.njk
     </h1>
 </header>
 
-<h1>{{ title }} <span data-status="{{ status }}">{{ status }}</div></h1>
+<h1>{{ title }}</h1>
 
 {{ content | safe }}
 
