Fix ordering of title
Have the most unique part of it first.

--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>The Design of Forms in Government departments{% if section %} – {{ section }}{% endif %}{% if title %} – {{ title }}{% endif %}</title>
+    <title>{% if title %}{{ title }} – {% endif %}{% if section %}{{ section }} – {% endif %}The Design of Forms in Government departments</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="stylesheet" href="/assets/styles.css">
   </head>
