Add paths to images

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -217,8 +217,16 @@ details > summary + * {
 main > figure > p > img,
 main td > img,
 main > p > img {
-  max-width: 100%;
   mix-blend-mode: darken;
+}
+
+@media only screen and (max-width: 900px) {
+  main > figure > p > img,
+  main td > img,
+  main > p > img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 figure {
@@ -451,6 +459,11 @@ th, td {
 
 /* table-of-symbols-for-proof-correction */
 
+.center {
+  margin: auto;
+  display: block;
+}
+
 .table-symbols table {
   border-collapse: collapse;
   font-size: 1rem;
@@ -468,8 +481,6 @@ th, td {
   border-right: 0;
 }
 .table-symbols img {
-  max-width: 2em;
-  max-height: 1.5em;
   vertical-align: middle;
 }
 
